bug fix- wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,4 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f4f4f4;
-  text-wrap: nowrap;
-  width: fit-content;
 }
